--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.1
+  horizontal_list_calendar: ^1.0.0
+  intl: ^0.20.2
+  scrollable_clean_calendar: ^1.5.0
+  shared_preferences: ^2.5.3
+  flutter_launcher_icons: ^0.14.4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true
+  image_path: "assets/app/icon.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +74,7 @@ flutter:
      - assets/app/
      - assets/onboarding/
      - assets/auth/
+     - assets/home/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
